Fixed not aligned items of datetime string

--- a/src/profile/Styles/Profile.css
+++ b/src/profile/Styles/Profile.css
@@ -202,6 +202,7 @@ p {
 .dateTimeStyle {
   text-align: center;
   vertical-align: middle;
+  width: 100px;
 }
 
 .unimelb > b {
